ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: crud-service
              port: 
                number: 9000
        - path: /otusapp/possokhov(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: crud-service
              port: 
                number: 9000
